fix content offset on collapse sidebar

--- a/app/BlazorVault.Web/Client/src/layout/_sidebar.scss
+++ b/app/BlazorVault.Web/Client/src/layout/_sidebar.scss
@@ -14,5 +14,9 @@
         left: -#{$sidebar-width};
         pointer-events: none;
         position: absolute;
+
+        & + #content {
+            left: 0px;
+        }
     }
 }
